@@ -1,3 +1,8 @@
-c3p0 {
-     dataSourceName="hoconTest"
+resolvetest {
+   name="hoconTest"
 }
+
+c3p0 {
+     dataSourceName=${resolvetest.name}
+}
+
